--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ db.sqlite3
 db.sqlite3-journal
 media
 .settings.py
+portfolio/settings.py
 .env
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
